Options Active on selection

--- a/index.html
+++ b/index.html
@@ -11,92 +11,94 @@
 <body class="bg-info">
     <div class="container-fluid">
         <div class="start_PG">
-            <div class="start_INFO">
-                <div class="Quiz_Title text-center">
-                    <img src="" alt="Web3Bridge">
-                    <h1><span class="text-danger fw-bolder">Web3Bridge</span><br> JS Certification Quiz</h1>
-                </div>
-            </div>
-            <div class="Start_BTN">
-                <button class="btn btn-medium btn-primary px-5 py-2">
-                    <div class="BTN_txt">Start</div>
-                </button>
-            </div>
+                    <div class="start_INFO">
+                        <div class="Quiz_Title text-center">
+                            <img src="" alt="Web3Bridge">
+                            <h1><span class="text-danger fw-bolder">Web3Bridge</span><br> JS Certification Quiz</h1>
+                        </div>
+                    </div>
+                    <div class="Start_BTN">
+                        <button class="btn btn-medium btn-primary px-5 py-2">
+                            <div class="BTN_txt">Start</div>
+                        </button>
+                    </div>
         </div>
         <div class="intro_PG">
-            <div class="intro_BOX bg-light px-2 py-5">
-                <div class="intro_Title text-center px-5 mb-5 shadow-sm">
-                    <h2>Read instructions carefully</h2>
-                    <p>Make sure you stay in a quiet environment away from distractions.</p>
-                </div>
-                <div class="instructions">
-                    <ol>
-                        <li>Each Question will be displayed for <span class="text-info fw-bolder">20 seconds</span></li>
-                        <li>Read carefully before selecting option</li>
-                        <li>Once selected, you can't choose another option</li>
-                        <li>You can only submit one answrer per question</li>
-                        <li>You cannot go back to expired questions</li>
-                        <li>Next question appears immediatly answer is submitted or time runs out</li>
-                        <li>Once the quiz starts, you cannot pause</li>
-                    </ol>
-                </div>
-                <div class="intro_Footer px-3">
-                    <h5 class="text-info">Good Luck</h5>
-                    <div class="foot_Buttons">
-                        <button class="btn btn-small btn-primary exit_BTN">
-                            <div class="BTN_txt">Return</div>
-                        </button>
-                        <button class="btn btn-small btn-primary Ctnue_BTN">
-                            <div class="BTN_txt">Start Quiz</div>
-                        </button>
+                    <div class="intro_BOX bg-light px-2 py-5">
+                        <div class="intro_Title text-center px-5 mb-5 shadow-sm">
+                            <h2>Read instructions carefully</h2>
+                            <p>Make sure you stay in a quiet environment away from distractions.</p>
+                        </div>
+                        <div class="instructions">
+                            <ol>
+                                <li>Each Question will be displayed for <span class="text-info fw-bolder">20 seconds</span></li>
+                                <li>Read carefully before selecting option</li>
+                                <li>Once selected, you can't choose another option</li>
+                                <li>You can only submit one answrer per question</li>
+                                <li>You cannot go back to expired questions</li>
+                                <li>Next question appears immediatly answer is submitted or time runs out</li>
+                                <li>Once the quiz starts, you cannot pause</li>
+                            </ol>
+                        </div>
+                        <div class="intro_Footer">
+                            <div class="row justify-content-start align-items-center">
+                                <h5 class="col-8 col-lg-5 text-center text-lg-start text-info">Good Luck</h5>
+                                <div class="col-8 col-lg-5 text-center text-lg-end foot_Buttons d-flex">
+                                    <button class="btn btn-small btn-primary exit_BTN">
+                                        <div class="BTN_txt">Return</div>
+                                    </button>
+                                    <button class="btn btn-small btn-primary Ctnue_BTN">
+                                        <div class="BTN_txt">Start Quiz</div>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
         </div>
         <div class="Question_PG">
-            <div class="question_BOX bg-light px-2 pt-3 pb-3">
-                <div class="qst_Title text-center mb-5 p-1 shadow-sm">
-                    <h2>Attempt all Questions</h2>
-                    <div class="timer bg-info">
-                        <div class="timer_TXT fw-bold">Time Left</div>
-                        <div class="countdown bg-dark px-3 py-1 text-white fw-bold">20</div>
-                    </div>
-                </div>
-                <div class="qst_section ps-2">
-                    <div class="mb-3">
-                            <span class="h1 fw-bold me-3">Q.
-                            </span>
-                        <span class="h2 question">
-                            <!-- <span>What is the acronym JS?</span> -->
-                        </span>
-                    </div>
-                    <div class="options ps-4">
-                        <!-- <div class="ans shadow-sm">
-                            <p>Joint Scripts</p>
-                            <span class="times me-3"><i class="bi bi-x"></i></span>
+                    <div class="question_BOX bg-light px-2 pt-3 pb-3">
+                        <div class="qst_Title text-center mb-5 p-1 shadow-sm">
+                            <h2>Attempt all Questions</h2>
+                            <div class="timer bg-info">
+                                <div class="timer_TXT fw-bold">Time Left</div>
+                                <div class="countdown bg-dark px-3 py-1 text-white fw-bold">20</div>
+                            </div>
                         </div>
-                        <div class="ans shadow-sm">
-                            <p>Java Script</p>
-                            <span class="check me-3"><i class="bi bi-check"></i></i></span>
+                        <div class="qst_section ps-2">
+                            <div class="mb-3">
+                                    <span class="h1 fw-bold me-3">Q.
+                                    </span>
+                                <span class="h2 question">
+                                    <!-- <span>What is the acronym JS?</span> -->
+                                </span>
+                            </div>
+                            <div class="options ps-4">
+                                <!-- <div class="ans shadow-sm">
+                                    <p>Joint Scripts</p>
+                                    <span class="times me-3"><i class="bi bi-x"></i></span>
+                                </div>
+                                <div class="ans shadow-sm">
+                                    <p>Java Script</p>
+                                    <span class="check me-3"><i class="bi bi-check"></i></i></span>
+                                </div>
+                                <div class="ans shadow-sm">
+                                    <p>Java Source</p>
+                                </div>
+                                <div class="ans shadow-sm">
+                                    <p>Source Script</p>
+                                </div> -->
+                            </div>
                         </div>
-                        <div class="ans shadow-sm">
-                            <p>Java Source</p>
+                        <div class="qst_Footer mx-3 mt-5">
+                            <div class="counter">
+                                <!-- <span>Question<p class="mx-1 fw-bold">2</p>of<p class="ms-2 fw-bold
+                                ">50</p></span> -->
+                            </div>
+                            <button class="btn btn-small btn-primary">
+                                <div class="BTN_txt px-3">Next</div>
+                            </button>
                         </div>
-                        <div class="ans shadow-sm">
-                            <p>Source Script</p>
-                        </div> -->
                     </div>
-                </div>
-                <div class="qst_Footer mx-3 mt-5">
-                    <div class="counter">
-                        <!-- <span>Question<p class="mx-1 fw-bold">2</p>of<p class="ms-2 fw-bold
-                        ">50</p></span> -->
-                    </div>
-                    <button class="btn btn-small btn-primary">
-                        <div class="BTN_txt px-3">Next</div>
-                    </button>
-                </div>
-            </div>
         </div>
     </div>
     
