--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body class="bg-info">
     <div class="container-fluid">
@@ -63,6 +64,7 @@
                                 <div class="timer_TXT fw-bold">Time Left</div>
                                 <div class="countdown bg-dark px-3 py-1 text-white fw-bold">20</div>
                             </div>
+                            <div class="timer_line"></div>
                         </div>
                         <div class="qst_section ps-2">
                             <div class="mb-3">
@@ -99,6 +101,13 @@
                             </button>
                         </div>
                     </div>
+        </div>
+        <div class="result_PG">
+            <div class="result_box bg-light">
+                <div class="result_icon">
+                    <i class="bi bi-x"></i>
+                </div>
+            </div>
         </div>
     </div>
     
